changed text that appears when no activities found

--- a/templates/results.html
+++ b/templates/results.html
@@ -218,7 +218,7 @@
       <button id="load-more-btn" onclick="loadMoreActivities()">Load More Activities</button>
       {% endif %}
       {% else %}
-      <p style="text-align:center;margin-top:2rem;">No activities found.</p>
+      <p style="text-align:center;margin-top:2rem;">We couldn't find any activities with those criteria. Try including more locations or activities.</p>
       {% endif %}
     </div>
 
