--- a/templates/index.html
+++ b/templates/index.html
@@ -694,7 +694,20 @@
       navigator.geolocation.getCurrentPosition(pos => {
         document.getElementById("user-lat").value = pos.coords.latitude;
         document.getElementById("user-lon").value = pos.coords.longitude;
-      });
+        if (window.map) {
+        if (window.userLocationMarker) {
+            window.map.removeLayer(window.userLocationMarker);
+        }
+        window.userLocationMarker = L.marker([pos.coords.latitude, pos.coords.longitude], {
+            icon: L.icon({
+            iconUrl: "https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png",
+            iconSize: [27, 43],
+            iconAnchor: [13, 41],
+            popupAnchor: [0, -36]
+            })
+        }).addTo(window.map).bindPopup("You are here").openPopup();
+        }
+    });
     });
 </script>
 
@@ -819,13 +832,6 @@
   </div>
   
 </form>
-  
-  
-
-  
-      
-      
-  
-  </body>
-  
+</body>
+</html>
   
