--- a/templates/results.html
+++ b/templates/results.html
@@ -69,6 +69,7 @@
       max-height: 400px;
       display: flex;
       flex-direction: column;
+      border: 3px solid #007acc; /* Adjust the color as needed */
     }
     .card-header {
       margin-bottom: 1rem;
@@ -265,12 +266,12 @@
           (position) => {
             const { latitude, longitude } = position.coords;
             L.marker([latitude, longitude], {
-              icon: L.icon({
-                iconUrl: 'https://cdn-icons-png.flaticon.com/512/684/684908.png',
-                iconSize: [30, 30],
-                iconAnchor: [15, 30],
-                popupAnchor: [0, -30],
-              })
+                icon: L.icon({
+                iconUrl: "https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png",
+                iconSize: [27, 43],
+                iconAnchor: [13, 41],
+                popupAnchor: [0, -36]
+            })
             }).addTo(map)
               .bindPopup('<strong>You are here</strong>');
           },
