--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 
     <!-- Section Header -->
     <div class="section-header">
-        <h1>Find Available Activities in Chicago</h1>
+        <h1>Find Available Park District Activities in Chicago</h1>
     </div>
 
     <!-- Hidden list of parks for internal use -->
